# who-am-i

./: .editorconfig  README.md  create-db.sql  main.hs  wai.hs  whoami.cabal
Haskell/: .gitignore  CHANGELOG.md  README.md
Haskell/app/: Main.hs
Haskell/app/Repo/: Personas.hs  Usuarios.hs
Prolog/: .gitignore  README.md  create-db.sql  main.pl
Prolog/src/: Interface.pl  Model.pl  Repository.pl  Utils.pl  errorHandler.pl  interfaces.pl  main.pl  pvp.pl
Prolog/src/Data/: Repository.pl  characters.pl  create-db.sql  repository.pl
Prolog/src/Games/: pve.pl
Prolog/src/Interfaces/: headers.pl  menus.pl
Prolog/src/Model/: model.pl
Prolog/src/Modes/: pve.pl  pvp.pl
Prolog/src/Utils/: errorHandler.pl  helpers.pl  utils.pl
Prolog/wai_log/: Main.pl  PvP.pl
app/: DecisionThree.hs  Main.hs  Menu.hs  Personas.hs  Rules.hs  Score.hs  Verifiers.hs  interface.hs
app/Controllers/: Persona.hs  Rules.hs
app/Data/: personas.hs
app/Model/: DecisionThree.hs  DecisionTree.hs
app/Repo/: Logic.hs  Personas.hs  PlayerxBot.hs  PlayerxPlayer.hs  Usuarios.hs
app/View/: interface.hs  menu.hs
src/Controllers/: Persona.hs  Rules.hs  Score.hs
src/Data/: personas.hs
src/Model/: DecisionThree.hs
src/View/: interface.hs  menu.hs
