cabal-version:      2.4
name:               whoami
version:            0.1.0.0

extra-source-files:
    CHANGELOG.md
    README.md

executable whoami
    main-is:          Main.hs
    build-depends:    base ^>=4.14.2.0, random
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules: DecisionTree
