cabal-version:      2.4
name:               whoami
version:            0.1.0.0

extra-source-files:
    CHANGELOG.md
    README.md

executable whoami
    main-is:          Main.hs
    other-modules:    Repo.Usuarios, Repo.Personas, DecisionTree
    build-depends:    base, sqlite-simple, random
    hs-source-dirs:   app
    default-language: Haskell2010
